--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,7 +13,7 @@ body {
 }
 
 .hamburger-line {
-  @apply w-[30px] h-[2px] my-2 block bg-dark;
+  @apply my-2 block h-[2px] w-[30px] bg-dark;
 }
 
 .hamburger-active > span:nth-child(1) {
